# Job-Application-Pipeline

./: .gitignore  README.md  pyproject.toml
config/: pipeline.example.yaml  profile.example.md
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-07-02-job-application-pipeline.md  2026-07-03-extract-hints.md  2026-07-03-stage-package-refactor.md  2026-07-09-batch-a-run-hygiene.md  2026-07-23-batch-b-vault-output.md  2026-07-23-batch-l-lean-core.md
docs/superpowers/specs/: 2026-07-02-extract-hints-design.md  2026-07-02-job-application-pipeline-design.md  2026-07-02-multi-provider-runners-design.md  2026-07-02-scrape-source-design.md  2026-07-02-stage-package-refactor-design.md  2026-07-03-application-status-design.md  2026-07-03-comp-in-notes-design.md  2026-07-03-js-fallback-fetcher-design.md  2026-07-03-local-server-ui-design.md  (+13 more)
job_pipeline/: cli.py  config.py
job_pipeline/core/: job.py  orchestrator.py  pipeline.py  registry.py  runner.py  sdk_runner.py  stage.py
job_pipeline/seeders/: existing_vault.py
job_pipeline/sources/: base.py  feeds.py  manual.py
job_pipeline/stages/: agents.py  publish.py  rules.py
job_pipeline/store/: obsidian.py  seen_index.py  vault_import.py
tests/: test_agent_stages.py  test_build_sources.py  test_cli.py  test_config.py  test_job.py  test_orchestrator.py  test_pipeline_e2e.py  test_publish.py  test_registry.py  test_rule_stages.py  test_runner.py  test_sdk_runner.py  test_seeder.py  test_seen_index.py  test_sources.py  test_vault_import.py
tests/fixtures/: greenhouse.json  jobs.rss  lever.json
(+13 files in other folders)
