[project]
name = "job-pipeline"
version = "0.1.0"
description = "Config-driven job discovery/scoring pipeline publishing to Obsidian"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
job-pipeline = "job_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["job_pipeline*"]

[tool.pytest.ini_options]
markers = ["integration: hits the real Agent SDK (excluded by default)"]
addopts = "-m 'not integration'"
